--- a/style.css
+++ b/style.css
@@ -9,6 +9,8 @@
     background-color: var(--bg-color);
     text-align: center;
     position: relative;
+    
+    font-family: 'Deja Vu Sans';
 }
 
 div {
@@ -29,7 +31,6 @@ main {
 main > * {
     /* border: 1px solid red; */
     margin: 15px;
-    background-color: var(--bg-color-2);
     border-radius: 5px;
     box-shadow: 0px 0px 5px 5px black;
 }
@@ -38,7 +39,6 @@ main > * {
 h1 {
     padding: 15px;
     color: var(--light-text);
-    font-family: Arial, Helvetica, sans-serif;
     font-weight: 100;
     text-shadow: 0 0 5px 5px rgb(240, 240, 240);
     font-size: large;
@@ -54,6 +54,10 @@ button {
     padding: 2px;
 }
 
+#transcript {
+    
+}
+
 .annotation {
     position: absolute;
     left: 0px;
@@ -63,7 +67,6 @@ button {
     color: var(--light-text);
     padding-bottom: 1px;
     border-bottom: 0.5px solid var(--light-text);
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 .column {
